--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 dist/
 # generated types
 .astro/
+.idea/
 
 # dependencies
 node_modules/
@@ -14,7 +15,7 @@ pnpm-debug.log*
 
 
 # environment variables
-.env
+**/.env
 .env.production
 
 # macOS-specific files
