Started social media api project

--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,16 @@ yarn-error.log*
 pnpm-debug.log*
 
 
-# environment variables
+# Python environment variables
 **/.env
 .env.production
 
 # macOS-specific files
 .DS_Store
+
+# Python files
+*.pyc
+**/__pycache__
+*.db
+*.png
+**/.venv
