Added custom script to move files

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   # Trigger the workflow every time you push to the `main` branch
   # Using a different branch name? Replace `main` with your branch’s name
   push:
-    branches: [ main, master ]
+    branches: [ main, master, design ]
   # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
 
@@ -20,6 +20,10 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
+      - name: Run Custom code
+        run: |
+          "${GITHUB_WORKSPACE}/.github/script.sh
+        shell: bash
       - name: Install, build, and upload your site
         uses: withastro/action@v2
         # with:
