--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Run Custom code
         run: |
-          "${GITHUB_WORKSPACE}/.github/script.sh
+          "${GITHUB_WORKSPACE}/.github/script.sh ${GITHUB_WORKSPACE}"
         shell: bash
       - name: Install, build, and upload your site
         uses: withastro/action@v2
