--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,11 +30,11 @@ jobs:
         run: echo $PWD && echo $GITHUB_WORKSPACE && chmod +x ${GITHUB_WORKSPACE}/.github/script.sh && ls -lR ${GITHUB_WORKSPACE}
       - name: Test Custom script
         run: bash script.sh ${GITHUB_WORKSPACE}
-      - name: Run Custom code
-        run: |
-          chmod +x "${GITHUB_WORKSPACE}/.github/script.sh"
-          "${GITHUB_WORKSPACE}/.github/script.sh ${GITHUB_WORKSPACE}"
-        shell: bash
+#      - name: Run Custom code
+#        run: |
+#          chmod +x "${GITHUB_WORKSPACE}/.github/script.sh"
+#          "${GITHUB_WORKSPACE}/.github/script.sh ${GITHUB_WORKSPACE}"
+#        shell: bash
       - name: Install, build, and upload your site
         uses: withastro/action@v2
         # with:
