--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/starlight": "^0.25.3",
-    "astro": "^4.10.2",
-    "sharp": "^0.32.5",
     "@astrojs/check": "^0.9.1",
+    "@astrojs/starlight": "0.34.0",
+    "astro": "^5.5.0",
+    "sharp": "^0.32.5",
+    "starlight-sidebar-topics": "^0.6.0",
     "typescript": "^5.5.4"
   }
 }
